--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>coalition-des-seigneurs</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div>hello world 6</div>
+ 
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
