--- a/index.html
+++ b/index.html
@@ -1,28 +1,78 @@
 <!doctype html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link href="src/style.css" rel="stylesheet">
+    <link href="src/card.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>coalition-des-seigneurs</title>
   </head>
 
-  <body>
-  <div class="d-flex justify-content-center align-items-center vh-100">
-    <div id="card" class="card shadow" style="width: 25rem;" draggable="false">
-      <img class="card-img-top" src="public/test.png" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.</p>
-        <a href="#" class="btn btn-light">Go somewhere</a>
+<body>
+  <div class="layout">
+
+    <div class="header">
+      <div class="header-inner">
+        <div class=title>
+          <h3> Titre de la partie </h3>
+          <p>Phrase de description du jeu</p>
+        </div>
+        <button class="btn btn-primary info-btn"> Comment jouer ? </button>
       </div>
     </div>
-  </div>
 
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+    <div class="aventuriers">
+      <div class="vertical-txt"><p>Aventuriers</p></div>
+            <div>
+        <div class="box">
+        </div>
+        <div class="box">
+        </div>
+        <div class="box">
+        </div>
+        <div class="box">
+        </div>
+      </div>
+    </div>
+
+    <div class="carte">
+      <div class="d-flex justify-content-center align-items-center vh-100">
+        <div id="card" class="card shadow" style="width: 25rem;" draggable="false">
+          <img class="card-img-top" src="public/test.png" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-light">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="objets">
+      <div class="vertical-txt-right"><p> Objets </p></div>
+      <div>
+        <div class="box">
+        </div>
+        <div class="box">
+        </div>
+        <div class="box">
+        </div>
+        <div class="box">
+        </div>
+      </div>
+    </div>
+
+    <div class="footer"> <button type="input"> Recommencer la partie </button>
+      <p>bas de page</p>
+    </div>
+
+ 
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
