--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link href="src/style.css" rel="stylesheet">
-    <link href="src/card.css" rel="stylesheet">
+    <link href="src/card-view.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,17 +26,21 @@
     </div>
 
     <div class="aventuriers">
-      <div class="vertical-txt" >
+      <div class="vertical-txt">
         <p style="text-align: center">Aventuriers</p>
       </div>
       <div class="box-left">
         <div class="box">
+          <img id="member1" src="">
         </div>
         <div class="box">
+          <img id="member2" src="">
         </div>
         <div class="box">
+          <img id="member3" src="">
         </div>
         <div class="box">
+          <img id="member4" src="">
         </div>
       </div>
     </div>
@@ -49,8 +53,8 @@
             <h5 id="card-title" style="display: none;"></h5>
             <div><p id="card-text"></p></div>
             <div style=" display: flex;  justify-content: space-evenly; gap: 10px;">
-            <div class="left-choice"><p id="choixl"></p> <img class="imgArrow" src="/public/left.png"></div>
-            <div class="right-choice"><p id="choixr" style="text-align:right"></p><img class="imgArrow" src="/public/right.png"></div>
+            <div class="left-choice"><p id="choixl"></p> <img class="imgArrow" src="assets/left.png"></div>
+            <div class="right-choice"><p id="choixr" style="text-align:right"></p><img class="imgArrow" src="assets/right.png"></div>
             </div>
           </div>
         </div>
@@ -76,7 +80,7 @@
     </div>
  
   <script type="module" src="/src/main.ts"></script>
-  <script type="module" src="/src/cards.ts"></script>
+  <script type="module" src="/src/current_card.ts"></script>
 </body>
 
 </html>
