--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 
     <div class="party_pop-up-container">
       <div class="party_pop-up">
-        <p>Text here</p>
+        <h3 id="name_member"></h3>
+        <b>Points de vie: </b><p id="hp"></p>
+        <b>Attaque:</b><p id="attack"></p>
+        <b>Dégâts:</b><p id="dmg"></p>
+        <b>Habileté spéciale :</b><p id="special"></p>
        </div>
     </div>
 
@@ -43,16 +47,16 @@
         <p style="text-align: center">Aventuriers</p>
       </div>
       <div class="box-left">
-        <div class="box">
+        <div class="box" id="member1id">
           <img id="member1" src="">
         </div>
-        <div class="box">
+        <div class="box" id="member2id">
           <img id="member2" src="">
         </div>
-        <div class="box">
+        <div class="box" id="member3id">
           <img id="member3" src="">
         </div>
-        <div class="box">
+        <div class="box" id="member4id">
           <img id="member4" src="">
         </div>
       </div>
