--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
 
     <div class="carte" >
       <div class="d-flex justify-content-center align-items-center h-100">
-        <div id="card" class="card shadow" style="width: 25rem;" draggable="false">
-          <img id=card-img class="card-img-top overflow-hidden" alt="Card image cap">
+        <div id="card" class="card shadow overflow-hidden" style="width: 25rem; background-color:#03735f;" draggable="false">
+          <img id=card-img class="card-img-top overflow-hidden rounded-bottom" alt="Card image cap">
           <div class="card-body" style="min-height:0; overflow-y:auto; flex:1 1 auto;">
             <h5 id="card-title" style="display: none;"></h5>
-            <div><p id="card-text"></p></div>
+            <div><p id="card-text" class="text-white"></p></div>
             <div style=" display: flex;  justify-content: space-evenly; gap: 10px;">
-            <div class="left-choice"><p id="choixl"></p> <img class="imgArrow" id="imgArrowl" src="assets/left.png"></div>
-            <div class="right-choice"><p id="choixr" style="text-align:right"></p><img class="imgArrow" src="assets/right.png"></div>
+            <div class="left-choice text-white fw-bold"><p id="choixl"></p> <img class="imgArrow" id="imgArrowl" src="assets/left.png"></div>
+            <div class="right-choice text-white fw-bold"><p id="choixr" style="text-align:right"></p><img class="imgArrow" src="assets/right.png"></div>
             </div>
           </div>
         </div>
