--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h3 id="name_member"></h3>
         <b>Points de vie: </b><p id="hp"></p>
         <b>Attaque:</b><p id="attack"></p>
-        <b>Dégâts:</b><p id="dmg"></p>
+        <div id="dmgRow"><b>Dégâts:</b><p id="dmg"></p></div>
         <b>Habileté spéciale :</b><p id="special"></p>
        </div>
     </div>
