--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
        </div>
     </div>
 
+    <div class="objects_pop-up-container">
+      <div class="objects_pop-up">
+        <h3 id="name"></h3>
+        <b>Effet: </b><p id="effect"></p>
+       </div>
+    </div>
+
   <div class="layout">
     <div class="header">
       <div class="header-inner">
@@ -80,17 +87,23 @@
 
     <div class="objets">
       <div class="box-right">
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
-        </div>
-        <div class="box">
+          <div class="box" id="object1id">
+            <img id="object1" src="">
+          </div>
+          <div class="box" id="object2id">
+            <img id="object2" src="">
+          </div>
+          <div class="box" id="object3id">
+            <img id="object3" src="">
+          </div>
+          <div class="box" id="object4id">
+            <img id="object4" src="">
+          </div>
+          </div>
+        <div class="vertical-txt-right">
+          <p style="text-align: center"> Objets </p>
         </div>
       </div>
-      <div class="vertical-txt-right"><p style="text-align: center"> Objets </p></div>
-    </div>
 
     <div class="footer"> <button type="input"> Recommencer la partie </button>
       <p>bas de page</p>
