--- a/index.html
+++ b/index.html
@@ -105,7 +105,19 @@
       </div>
 
     <div class="footer">
-      <button id="infoopen" class="btn btn-outline-dark btn-lg info-btn" style="background-color:#e6dac7"> Mes informations </button>
+      
+      <div><h3 class="mb-1" style="color:#03735f">Jauge de vitesse :</h3>
+      <div class="containerJV" id="jaugeVitesse">
+            <div class="boxJV"><img id="J1" alt=""></div>
+            <div class="boxJV"><img id="J2" alt=""></div>
+            <div class="boxJV"><img id="J3" alt=""></div>
+            <div class="boxJV"><img id="J4" alt=""></div>
+            <div class="boxJV"><img id="J5" alt=""></div>
+            <div class="boxJV"><img id="J6" alt=""></div>
+          </div>  
+      </div>
+
+      <button id="infoopen" class="btn btn-outline-dark btn-lg info-btn" style="background-color:#03735f; color: white"> Mes informations </button>
       
       <div class="infoModal">
         <div class="infoPopup">
