--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="aventuriers">
       <div class="vertical-txt">
-        <p style="text-align: center">Aventuriers</p>
+        <h1  class="mb-1" style="text-align: center ; color:#03735f">Aventuriers</h1>
       </div>
       <div class="box-left">
         <div class="box" id="member1id">
@@ -100,7 +100,7 @@
           </div>
           </div>
         <div class="vertical-txt-right">
-          <p style="text-align: center"> Objets </p>
+          <h1  class="mb-1" style="text-align: center ; color:#03735f"> Objets </h1>
         </div>
       </div>
 
